--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/js/admin.base.js": "/js/admin.base.js",
     "/js/admin.illusion.js": "/js/admin.illusion.js",
     "/js/app.js": "/js/app.js",
     "/css/main.css": "/css/main.css",
